# Nepal-Gov-Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: Nepal_GovAgent_Demo.ipynb  agent_workflow.py  benchmark_corpus.py  nepali_query.py  quickstart.py  service_guide.py
nepal_gov_agent/: __init__.py  agent.py  benchmark.py  cli.py  config.py  corpus.py  ingest.py  llm_ollama.py  preprocess.py  rag.py
tests/: conftest.py  test_agent.py  test_benchmark.py  test_ingest.py  test_preprocess.py  test_rag.py
